@@ -59,4 +59,4 @@ TODO (know issues in CPU model):
 
 [!] TODO: Convert CPUDB to plugins and search for them in runtime
 
-[!] Implement MPX, AVX-512 and their extensions
+[!] Implement MPX, AVX-512 extensions
